--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,7 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
+.venv*
 env/
 venv/
 ENV/
@@ -140,3 +140,4 @@ dmypy.json
 .#*
 .ipynb_checkpoints/*
 
+.vscode*
